Fixed extra padding caused by search button.

--- a/themes/s4/css/style.less
+++ b/themes/s4/css/style.less
@@ -269,6 +269,12 @@ a:hover .nohover {
 	
 	.views-exposed-form .views-exposed-widget {
 		padding: 5px 7px 0 0;
+		
+		button {
+			width: 0;
+			height: 0;
+			overflow: hidden;
+		}
 	}
 	
 	.block {
